ubl_parser/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ublparser        # < name of the deployment
  namespace: ublparser   # < namespace where place the deployment and pods
  labels:
    app: ublparser       # < label for tagging and reference
spec:
  replicas: 1           # < number of pods to deploy
  selector:
    matchLabels:
      app: ublparser
  strategy:
    rollingUpdate:
      maxSurge: 0       # < The number of pods that can be created above the desired amount of pods during an update
      maxUnavailable: 1 # < The number of pods that can be unavailable during the update process
    type: RollingUpdate # < New pods are added gradually, and old pods are terminated gradually
  template:
    metadata:
      labels:
        app: ublparser
    spec:
      containers:
      - image: gitea.olympus.mangelschots.org/blackcom/ubl_parser_backend # < the name of the docker image we will use
        name: ublparser-backend                      # < name of container
        imagePullPolicy: Always             # < always use the latest image when creating container/pod
        ports:                              # < the ports required (see container documentation)
         - containerPort: 5000
           name: http
           protocol: TCP
--
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ublparser-frontend        # < name of the deployment
  namespace: ublparser   # < namespace where place the deployment and pods
  labels:
    app: ublparser-frontend       # < label for tagging and reference
spec:
  replicas: 1           # < number of pods to deploy
  selector:
    matchLabels:
      app: ublparser-frontend
  strategy:
    rollingUpdate:
      maxSurge: 0       # < The number of pods that can be created above the desired amount of pods during an update
      maxUnavailable: 1 # < The number of pods that can be unavailable during the update process
    type: RollingUpdate # < New pods are added gradually, and old pods are terminated gradually
  template:
    metadata:
      labels:
        app: ublparser-frontend
    spec:
      containers:
      - image: gitea.olympus.mangelschots.org/blackcom/ubl_parser_frontend # < the name of the docker image we will use
        name: ublparser-frontend                      # < name of container
        imagePullPolicy: Always             # < always use the latest image when creating container/pod
        ports:                              # < the ports required (see container documentation)
         - containerPort: 3000
           name: http
           protocol: TCP
