ubl_parser/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ublparser-backend-service    # < name of the service
  namespace: ublparser       # < namespace where place the deployment and pods
spec:
  selector:
    app: ublparser           # < reference to the deployment (connects with this deployment)
  ports:
    - name: http
      protocol: TCP
      port: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: ublparser-service    # < name of the service
  namespace: ublparser       # < namespace where place the deployment and pods
spec:
  selector:
    app: ublparser-frontend           # < reference to the deployment (connects with this deployment)
  ports:
    - name: http-frontend
      protocol: TCP
      port: 5000
